# claude-pilot

./: .coderabbit.yaml  .gitignore  .mcp-funnel.json  .mcp.json  .releaserc.json  CHANGELOG.md  CLAUDE.local.md  README.md  install.sh  pyproject.toml
.claude/: settings.local.json  statusline.config.json
.claude/commands/: implement.md  plan.md  remember.md  sync.md  verify.md
.claude/hooks/: file-checker.sh  file_checker_qlty.py  tdd_enforcer.py
.claude/plugin/: package-lock.json  package.json
.claude/scripts/: wrapper.py
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: claude.yml  deploy-website.yml  quality.yml  release-dev.yml  release.yml
ccp/: __init__.py  auth.py  claude_installer.py  cli.py  memory.py  wrapper.py
ccp/statusline/: formatter.py  providers.py  tips.py  widgets.py
console/: package.json  tsconfig.json  vite.config.ts
console/scripts/: build-hooks.js
docs/site/: index.html  tailwind.config.ts
installer/: __init__.py  cli.py  config.py  context.py  downloads.py  platform_utils.py  ui.py
installer/steps/: base.py  bootstrap.py  ccp_binary.py  claude_files.py  config_files.py  dependencies.py  environment.py  finalize.py  git_setup.py  migration.py  premium.py  (+3 more)
launcher/: __init__.py  __main__.py  auth.py  banner.py  claude_installer.py  cli.py  config.py  context.py  helper.py  license.py  plan.py  services.py  session.py  statusline_cmd.py  utils.py  worktree.py  wrapper.py
pilot/: claude.json  package.json  plugin.json  settings.json
scripts/: build-rules.sh  install.py  install.sh  setup-env.sh
(+386 files in other folders)
