[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["launcher*"]

[project]
name = "claude-pilot-free"
version = "0.1.0"
description = "Free Claude Pilot - no license required"
requires-python = ">=3.12,<3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.3",
    "basedpyright>=1.32.1",
]

[tool.pytest.ini_options]
pythonpath = ["launcher", "."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
testpaths = ["launcher/tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
